[package]
name = "void"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
jiff = "0.2"

# Cli
ctrlc = "3.4"
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Serde
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
csv-core = "0.1"
bytes = "1.10"

# Concurrent Utilities
orx-concurrent-vec = "3.5"
dashmap = "6.1"

# Time
chrono = { version = "0.4", features = ["serde"] }
miette = { version = "7.5", features = ["fancy"] }
