[package]
name = "void"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
jiff = "0.2"

# Cli
ctrlc = "3.4"
thiserror = "2.0"
anyhow = "1.0"

# Concurrency
once_cell = "1.21"
spin = "0.10.0"

# Async
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
console-subscriber = "0.4.1"

futures = "0.3"
async-trait = "0.1"

# Serde
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
csv-core = "0.1"
bytes = "1.10"

# Concurrent Utilities
dashmap = "6.1"

# Time
chrono = { version = "0.4", features = ["serde"] }
miette = { version = "7.5", features = ["fancy"] }
go-parse-duration = "0.1.1"

# Utilities
string-join = "0.1.2"
lasso = { version = "0.7.3", features = ["multi-threaded"]}

# Graph
petgraph = "0.8"

# Request
reqwest = { version = "0.12.15", features = ["http2", "charset", "stream", "rustls-tls"], default-features = false }

# Protobuf
prost = "0.13.5"
snap = "1.1.1"
paste = "1.0.15"
num_cpus = "1.16.0"
